--- a/Chitalka_v3/Views/Books/Create.cshtml
+++ b/Chitalka_v3/Views/Books/Create.cshtml
@@ -7,7 +7,7 @@
 <form asp-action="Create" style="width:80%;margin-top:5%;margin-left:10%;">
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Автор</label>
-        <input asp-for="author" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Айзек Азимов" name="author">
+        <input asp-for="inpAuthor" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Айзек Азимов" name="author">
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Название</label>
@@ -15,7 +15,7 @@
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Жанр</label>
-        <input asp-for="categoryName" type="text" class="form-control" id="exampleFormControlInput1" placeholder="сай-фай" name="categoryName">
+        <input asp-for="inpGenre" type="text" class="form-control" id="exampleFormControlInput1" placeholder="сай-фай" name="categoryName">
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Краткое описание книги</label>
@@ -23,11 +23,11 @@
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Картинка</label>
-        <input asp-for="img" type="text" class="form-control" id="exampleFormControlInput1" placeholder="вставь путь с сервера"name="img">
+        <input asp-for="inpImage" type="text" class="form-control" id="exampleFormControlInput1" placeholder="вставь путь с сервера"name="img">
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Год выхода</label>
-        <input asp-for="year" type="text" class="form-control" id="exampleFormControlInput1" placeholder="1942" name="year">
+        <input asp-for="inpCentuary" type="text" class="form-control" id="exampleFormControlInput1" placeholder="1942" name="year">
     </div>
 
     <div class="mb-3">
