--- a/Chitalka_v3/Views/Books/Delete.cshtml
+++ b/Chitalka_v3/Views/Books/Delete.cshtml
@@ -30,28 +30,34 @@
             @Html.DisplayFor(model => model.descriprionBook)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.img)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.img)
+            @Html.DisplayFor(model => model.Image)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.categoryName)
+            @Html.DisplayNameFor(model => model.Centuary)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.categoryName)
+            @Html.DisplayFor(model => model.Centuary)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.year)
+            @Html.DisplayNameFor(model => model.Country)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.year)
+            @Html.DisplayFor(model => model.Country)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.author)
+            //Html.DisplayNameFor(model => model.Author)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.author)
+            //Html.DisplayFor(model => model.Author)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Genre)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Genre)
         </dd>
     </dl>
     
