--- a/Chitalka_v3/Views/Books/Index.cshtml
+++ b/Chitalka_v3/Views/Books/Index.cshtml
@@ -16,18 +16,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.descriprionBook)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.img)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.categoryName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.year)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.author)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -43,18 +32,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.descriprionBook)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.img)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.categoryName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.year)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.author)
-            </td>
+           
             <td>
                 <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.id">Details</a> |
@@ -73,7 +51,7 @@
 
 
         <div class="card" style="width: 20%;margin:1.5%;height:400px;">
-            <img src="@Html.DisplayFor(modelItem => item.img)" class="card-img-top" alt="...">
+            <img src="@Html.DisplayFor(modelItem => item.Image.small)" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.bookName)</h5>
                 <p class="card-text">@Html.DisplayFor(modelItem => item.descriprionBook)</p>
