--- a/Chitalka_v3/Views/Books/Details.cshtml
+++ b/Chitalka_v3/Views/Books/Details.cshtml
@@ -22,36 +22,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.descriprionBook)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.img)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.img)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.categoryName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.categoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.year)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.year)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.author)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.author)
-        </dd>
+  
     </dl>
 </div>-->
 
 <div style="background:#C0C0C0;height:650px;margin-top:-5%;padding-top:5%;">
     <div style="width:60%;height:500px;margin-left:20%;margin-top:7%;margin-bottom:10%;position:absolute;text-align:center;position:absolute;">
-        <img src="@Html.DisplayFor(model => model.img)" height="400">
+        <img src="@Html.DisplayFor(model => model.Image)" height="400">
     </div>
 </div>
 <div style="height:100px;background:#DCDCDC;text-align: center;padding-top:0%;font-size:60px;">
