--- a/Chitalka_v3/Views/Home/Index.cshtml
+++ b/Chitalka_v3/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 
         <div class="card" style="width: 20%;margin:1.5%;height:400px;">
-            <img src="@Html.DisplayFor(modelItem => item.img)" class="card-img-top" alt="...">
+            <img src="@Html.DisplayFor(modelItem => item.Image.small)" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.bookName)</h5>
                 <p class="card-text">@Html.DisplayFor(modelItem => item.descriprionBook)</p>
