--- a/ChitalkaMVC/Views/Shared/Components/ListGenres/Default.cshtml
+++ b/ChitalkaMVC/Views/Shared/Components/ListGenres/Default.cshtml
@@ -1,8 +1,9 @@
-﻿@model IList<ChitalkaMVC.Storage.Entities.Genre>
+﻿@*@model IList<ChitalkaMVC.Storage.Entities.Genre>*@
  
 @{Layout = null;}
 
-    @foreach(var item in Model)
+    @*@foreach(var item in Model)
     {
         <option value=@item.Id>@item.Name</option>
-    }
+    }*@
+    @Html.ListBox("GenreIds",(MultiSelectList)ViewBag.Genres)
