--- a/ChitalkaMVC/Views/Shared/_Layout.cshtml
+++ b/ChitalkaMVC/Views/Shared/_Layout.cshtml
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ChitalkaMVC</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#11d09c">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ChitalkaMVC.styles.css" asp-append-version="true" />
@@ -16,7 +23,7 @@
         </div>
         <div class="offcanvas-body">
             <div>
-                <h1><a asp-area="" asp-controller="Users" asp-action="Profile">@await Component.InvokeAsync("MenuName")<br></a></h1>
+                <h1><a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Profile">@await Component.InvokeAsync("MenuName")<br></a></h1>
             </div>
            <div class="list-group list-group-flush">
                 <button type="button" class="list-group-item list-group-item-action">Онгоинги</button>
