--- a/ChitalkaMVC/Views/Users/Logout.cshtml
+++ b/ChitalkaMVC/Views/Users/Logout.cshtml
@@ -1,4 +1,7 @@
-﻿<h4>Are you sure you want to log out?</h4>
+﻿@{
+    ViewData["Title"] = "Logout";
+}
+<h4>Are you sure you want to log out?</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
