--- a/ChitalkaMVC/Views/Authors/Create.cshtml
+++ b/ChitalkaMVC/Views/Authors/Create.cshtml
@@ -1,17 +1,20 @@
-﻿@model ChitalkaMVC.Storage.Entities.Author
+﻿@model ChitalkaMVC.Models.AuthorViewModel
 <h4>New Author</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <select asp-for="CountryId"><option value="">Choose Country</option>
-                        @await Component.InvokeAsync("ListCountries")
-                </select>
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                @await Component.InvokeAsync("ListCountries", new { aspFor = "Author.CountryId", countryId = 0 })
+                <label asp-for="Author.Name" class="control-label"></label>
+                <input required asp-for="Author.Name" class="form-control" />
+                <span asp-validation-for="Author.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" accept="image/*" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
