--- a/ChitalkaMVC/Views/Authors/Delete.cshtml
+++ b/ChitalkaMVC/Views/Authors/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
            @Model.Country?.Name
         </dd>
+        <dt class = "col-sm-2">
+           Image
+        </dt>
+        <dd class = "col-sm-10">
+           <img style="height: 225px; width: 225px" src=@Model.ImagePath asp-append-version="true" />
+        </dd>
     </dl>
     
     <form asp-action="Delete">
