--- a/ChitalkaMVC/Views/Authors/Edit.cshtml
+++ b/ChitalkaMVC/Views/Authors/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChitalkaMVC.Storage.Entities.Author
+﻿@model ChitalkaMVC.Models.AuthorViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,16 +10,23 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Author.Id" />
+            <input type="hidden" asp-for="Author.ImagePath" />
             <div class="form-group">
-                <select asp-for="CountryId"><option value="">Choose Country</option>
-                        @await Component.InvokeAsync("ListCountries")
-                </select>
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                @await Component.InvokeAsync("ListCountries", new { aspFor = "Author.CountryId", countryId = Model.Author.CountryId })
+                <label asp-for="Author.Name" class="control-label"></label>
+                <input required asp-for="Author.Name" class="form-control" />
+                <span asp-validation-for="Author.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" accept="image/*" />
+                <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
+            <div>
+                    <img style="height: 225px; width: 225px" src=@Model.Author.ImagePath asp-append-version="true" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
