--- a/ChitalkaMVC/Views/Authors/Index.cshtml
+++ b/ChitalkaMVC/Views/Authors/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+               Image
+            </th>
+            <th>
                Name
             </th>
             <th>
@@ -26,7 +29,10 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+            <tr>
+                <td>
+                    <img style="height: 225px; width: 225px" src=@item.ImagePath asp-append-version="true" />
+            </td>
             <td>
                 @item.Name
             </td>
