--- a/ChitalkaMVC/Views/Books/Create.cshtml
+++ b/ChitalkaMVC/Views/Books/Create.cshtml
@@ -1,33 +1,32 @@
-﻿@model ChitalkaMVC.Storage.Entities.Book
+﻿@model ChitalkaMVC.Models.BookViewModel
 <h4>New Book</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <select asp-for="AuthorId"><option value="">Choose Author</option>
-                        @await Component.InvokeAsync("ListAuthors")
-                </select>
-                <select asp-for="CenturyId"><option value="">Choose Century</option>
-                        @await Component.InvokeAsync("ListCenturies")
-                </select>
-                <select id="GenreId" name="GenreId" multiple="multiple">
-                        @await Component.InvokeAsync("ListGenres")
-                </select>
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-                <label asp-for="Text" class="control-label"></label>
-                <input asp-for="Text" class="form-control" />
-                <span asp-validation-for="Text" class="text-danger"></span>
+                @await Component.InvokeAsync("ListAuthors", new{aspFor="Book.AuthorId", authorId=0})
+                @await Component.InvokeAsync("ListCenturies", new{aspFor="Book.CenturyId", centuryId=0})
+                 @await Component.InvokeAsync("ListGenres", null)
+                <label asp-for="Book.Name" class="control-label"></label>
+                <input required asp-for="Book.Name" class="form-control" />
+                <span asp-validation-for="Book.Name" class="text-danger"></span>
+                <label asp-for="Book.Description" class="control-label"></label>
+                <input required asp-for="Book.Description" class="form-control" />
+                <span asp-validation-for="Book.Description" class="text-danger"></span>
+                <label asp-for="Book.Text" class="control-label"></label>
+                <input required asp-for="Book.Text" class="form-control" />
+                <span asp-validation-for="Book.Text" class="text-danger"></span>
                 <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Visibility" /> @Html.DisplayNameFor(model => model.Visibility)
+                    <input class="form-check-input" asp-for="Book.Visibility" /> @Html.DisplayNameFor(model => model.Book.Visibility)
                 </label>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" accept="image/*" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             </div>
             <div class="form-group">
