--- a/ChitalkaMVC/Views/Books/Delete.cshtml
+++ b/ChitalkaMVC/Views/Books/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            Image
+        </dt>
+        <dd class = "col-sm-10">
+            <img style="height: 225px; width: 225px" src=@Model.ImagePath asp-append-version="true" />
+        </dd>
+        <dt class = "col-sm-2">
             Name
         </dt>
         <dd class = "col-sm-10">
