--- a/ChitalkaMVC/Views/Users/Register.cshtml
+++ b/ChitalkaMVC/Views/Users/Register.cshtml
@@ -10,19 +10,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="User.Username" class="control-label"></label>
-                <input asp-for="User.Username" class="form-control" />
+                <input required asp-for="User.Username" class="form-control" />
                 <span asp-validation-for="User.Username" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="User.Password" class="control-label"></label>
-                <input asp-for="User.Password" class="form-control" />
+                <input required type="password" asp-for="User.Password" class="form-control" />
                 <span asp-validation-for="User.Password" class="text-danger"></span>
             </div>
-            @*<div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ifAdmin" /> @Html.DisplayNameFor(model => model.ifAdmin)
-                </label>
-            </div>*@
             <div class="form-group">
                 <label class="control-label">@Model.Result</label>
             </div>
