--- a/ChitalkaMVC/Views/Home/Index.cshtml
+++ b/ChitalkaMVC/Views/Home/Index.cshtml
@@ -4,5 +4,12 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h3 class="display-4">Chitalka</h3>
+    <img src="Images/logo.png"/>
+    <h2 class="display-5">Explore, Organize, Discuss?(maybe)</h2>
+    <div class="row">
+        <div class="col-6"><a class="h3" style="text-decoration:none;" asp-controller="Books" asp-action="List">Books</a></div>
+        <div class="col-6"><a class="h3" style="text-decoration:none;" asp-controller="Authors" asp-action="List">Authors</a></div>
+        
+    </div>
 </div>
