--- a/ChitalkaMVC/Views/Notes/Edit.cshtml
+++ b/ChitalkaMVC/Views/Notes/Edit.cshtml
@@ -19,7 +19,7 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
                 <label asp-for="Text" class="control-label"></label>
-                <input asp-for="Text" class="form-control" />
+                <textarea style="resize: none;" asp-for="Text" class="form-control"></textarea>
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
             <div class="form-group">
