--- a/ChitalkaMVC/Views/Shared/Components/MenuCountries/Default.cshtml
+++ b/ChitalkaMVC/Views/Shared/Components/MenuCountries/Default.cshtml
@@ -5,6 +5,6 @@
 <div class="list-group list-group-flush">
     @foreach(var country in Model)
     {
-        <button type="button" class="list-group-item list-group-item-action">@country.Name</button>
+        <a type="button" href="/authors/list?countryId=@country.Id" class="list-group-item list-group-item-action">@country.Name</a>
     }
 </div>
