--- a/ChitalkaMVC/Views/Users/Login.cshtml
+++ b/ChitalkaMVC/Views/Users/Login.cshtml
@@ -15,14 +15,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="User.Password" class="control-label"></label>
-                <input required asp-for="User.Password" class="form-control" />
+                <input required type="password" asp-for="User.Password" class="form-control" />
                 <span asp-validation-for="User.Password" class="text-danger"></span>
             </div>
-            @*<div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ifAdmin" /> @Html.DisplayNameFor(model => model.ifAdmin)
-                </label>
-            </div>*@
             <div class="form-group">
                 <label class="control-label">@Model.Result</label>
             </div>
@@ -30,5 +25,6 @@
                 <input type="submit" value="Log In" class="btn btn-primary" />
             </div>
         </form>
+        <a asp-action="PasswordReset">Reset password</a>
     </div>
 </div>
